# cryptfolio

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  util.rs
src/app/: cryptfolio.rs  mod.rs
src/database/: mod.rs
src/database/entry/: coin_account.rs  coin_order.rs  coin_reward.rs  coin_transfer.rs  fiat_transfer.rs  mod.rs  platform_connection.rs
src/database/script/: mod.rs
src/platform/: mod.rs  sync_client.rs
src/platform/blockchain/: mod.rs  solana.rs
src/platform/exchange/: coinbase.rs  coinbase_pro.rs  mod.rs
src/recording/: coin_record.rs  mod.rs  tax_record.rs
tests/: test.rs
