[package]
name = "cryptfolio"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
chrono = "0.4.19"
coinbase = { path = "../coinbase" }
solana-client = "1.10.8"
solana-program = "1.10.8"
solana-sdk = "1.10.8"
solana-transaction-status = "1.10.8"
sqlite3 = "0.24.0"
thiserror = "1.0.31"

[dev-dependencies]
tokio = { version = "1.20.0", features = ["full"] }